<resources>
    <string name="app_name">VK Auto Message</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="loading">Loading..</string>
    <string name="empty_records_list">No records for this user yet</string>
    <string name="empty_users_list">No users yet</string>
    <string name="text_error">ERROR!!!\nClick to update</string>
    <string name="login_failed">Login failed!</string>
    <string name="settings">Settings</string>
    <string name="cant_write_text">You can\'t write to this user!</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="no_friends">No friends!</string>
    <string name="empty_message_toast">Message can\'t be empty!</string>
    <string name="no_days_in_week_selected_toast">Select at least one day!</string>
    <string name="notification_ticker_success">Message sent successfully</string>
    <string name="notification_ticker_fail">Message was NOT sent!</string>
    <string name="delete_record_dialog_title">Delete record?</string>
    <string name="search_hint">search friend</string>
    <string name="nothing_found">Nothing found</string>
    <string name="delete_user">Delete user and all records for him?</string>
    <string name="all_days">All days</string>
    <string name="all_except">All except %s</string>

    <string-array name="repeat_types">
        <item>@string/periodically_by_hours</item>
        <item>@string/days_in_week</item>
        <item>@string/day_in_year</item>
    </string-array>

    <string name="user_photo_transition" translatable="false">user_photo_transition</string>
    <string name="toolbar_icon_transition" translatable="false">toolbar_icon_transition</string>
    <string name="message_transition" translatable="false">message_transition</string>

    <string name="toast_dont_write_to_developer">I do not recommend you to do that!</string>
    <string name="toast_great_choice">Great choice!</string>
    <string name="toast_i_told_you">I told you!</string>
    <string name="clear_errors">clear errors</string>
    <string name="ok">ok</string>
    <string name="show_errors">Show errors</string>
    <string name="send_to_developer">send to developer</string>
    <string name="message_to_developer_success">Message to developer was sent successfully.</string>
    <string name="message_to_developer_fail">Message to developer was NOT sent!</string>

    <string name="receiver_of_message">Receiver of message</string>
    <string name="remove_selected">Remove selected</string>
    <string name="select_all">Select all</string>

    <string name="choose_repeat_type">Choose repeat type</string>
    <string name="choose_period">Choose period</string>
    <string name="choose_days_in_week">Choose days in week</string>
    <string name="undo">Undo</string>
    <string name="items_deleted_format">%d items deleted</string>
    <string name="sort">Sort</string>
    <string name="_default">Default</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="records_count">Records count</string>
    <string name="enabled_records_count">Enabled records count</string>
    <string name="sort_by">Sort by:</string>
    <string name="filter">Filter</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="periodically_by_hours">Periodically by hours</string>
    <string name="days_in_week">Days in week</string>
    <string name="day_in_year">Day in year</string>
    <string name="filter_by_enabled_state">Filter by enabled state:</string>
    <string name="filter_repeat_period">Filter repeat period:</string>
    <string name="reset">Reset</string>
</resources>
