<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/filter_by_enabled_state"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/filter_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enabled"/>

        <CheckBox
            android:id="@+id/filter_disabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disabled"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/filter_repeat_period"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/filter_periodically_by_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodically_by_hours"/>

        <CheckBox
            android:id="@+id/filter_days_in_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_in_week"/>

        <CheckBox
            android:id="@+id/filter_day_in_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_in_year"/>

    </LinearLayout>

    <Button
        android:id="@+id/reset_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/reset"/>

</LinearLayout>