<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/sort_by"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/sort_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <RadioButton
            android:id="@+id/sort_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_default"/>

        <RadioButton
            android:id="@+id/sort_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"/>

        <RadioButton
            android:id="@+id/sort_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"/>

        <RadioButton
            android:id="@+id/sort_records_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/records_count"/>

        <RadioButton
            android:id="@+id/sort_enabled_records_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enabled_records_count"/>

    </RadioGroup>

</LinearLayout>