<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/search_hint"
        android:singleLine="true"
        android:lines="1"
        android:maxLines="1"
        android:textSize="18sp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"/>

        </android.support.v4.widget.SwipeRefreshLayout>

        <ViewAnimator
            android:id="@+id/view_animator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inAnimation="@android:anim/fade_in"
            android:outAnimation="@android:anim/fade_out">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/loading"
                android:textColor="@android:color/black"
                android:textSize="@dimen/loading_error_empty_text_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_error"
                android:textColor="@color/error"
                android:textSize="@dimen/loading_error_empty_text_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_friends"
                android:textColor="@color/no_items"
                android:textSize="@dimen/loading_error_empty_text_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nothing_found"
                android:textColor="@android:color/black"
                android:textSize="@dimen/loading_error_empty_text_size"/>

        </ViewAnimator>

    </FrameLayout>

</LinearLayout>