<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:transitionGroup="false"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/choose_user_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/add_user"
        app:layout_behavior="com.qwert2603.vkautomessage.behavior.BottomFabHideBehavior"/>

    <com.qwert2603.vkautomessage.floating_action_mode.FloatingActionMode
        android:id="@+id/floating_action_mode"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="@dimen/action_mode_margin"
        android:background="@drawable/action_mode_background"
        app:can_dismiss="true"
        app:can_drag="true"
        app:dismiss_threshold="0.35"
        app:drag_icon="@drawable/ic_drag_white_24dp"
        app:animation_duration="@integer/action_mode_animation_duration"
        app:hide_direction="nearest"
        android:translationZ="6dp"/>

    <ViewAnimator
        android:id="@+id/view_animator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="@android:color/black"
            android:textSize="@dimen/loading_error_empty_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_error"
            android:textColor="@color/error"
            android:textSize="@dimen/loading_error_empty_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/empty_users_list"
            android:textColor="@color/no_items"
            android:textSize="@dimen/loading_error_empty_text_size"/>

    </ViewAnimator>

</android.support.design.widget.CoordinatorLayout>